--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.13.4",
+    "jquery": "^3.2.1",
     "mongoose": "^4.4.15",
     "multer": "^1.3.0"
   },
